--- a/Experiments/IsaacBlandin/randomNumber/app/src/main/res/values/strings.xml
+++ b/Experiments/IsaacBlandin/randomNumber/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">randomNumber</string>
+    <string name="app_name">Random Number Generator</string>
+    <string name="beginning_value">0</string>
+    <string name="button_text">Generate</string>
+    <string name="input_hint">maximum value</string>
 </resources>
