Got android studio to pass data between fragments, slightly different than isaac but works

--- a/Experiments/AbramDemo/android_1/app/src/main/res/values/strings.xml
+++ b/Experiments/AbramDemo/android_1/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="hello_world">\"Hello World\"</string>
+    <string name="prompt_hint">Enter your name</string>
+    <string name="string_hello">string/hello</string>
 </resources>
