added login screen fragment to volley experiment

--- a/Experiments/IsaacBlandin/VolleyExperiment/app/src/main/res/values/strings.xml
+++ b/Experiments/IsaacBlandin/VolleyExperiment/app/src/main/res/values/strings.xml
@@ -9,4 +9,11 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+    <string name="login_header">Please Enter Login Credientials</string>>
+    <string name="username_hint">username</string>
+    <string name="password_hint">password</string>
+    <string name="login_button_text">Login</string>
+    <string name="logo_content_description">logo</string>
+
 </resources>
