--- a/Experiments/AbramDemo/Volleytest1/app/src/main/res/values/strings.xml
+++ b/Experiments/AbramDemo/Volleytest1/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="postman_mock_server_url">https://b82a18c1-e947-44cf-bf54-6d24cab1848c.mock.pstmn.io/login_attempt/</string>
 </resources>
