--- a/Frontend/Unus/app/src/main/res/values/strings.xml
+++ b/Frontend/Unus/app/src/main/res/values/strings.xml
@@ -29,5 +29,10 @@
 
     <string name="signup_url">https://3d5d7b90-cdb8-41bc-b45b-cffb50951687.mock.pstmn.io/signup/</string>
 
-    <string name="placeholder">login successful</string>
+    <string name="id_display">id: %d</string>
+
+    <string name="join_game_button">JOIN GAME</string>
+    <string name="host_game_button">HOST GAME</string>
+    <string name="leaderboards_button">LEADERBOARD</string>
+    <string name="logout_button">LOGOUT</string>
 </resources>
