fixed the issue sort of, had to hardcode the URL for now

--- a/Frontend/Unus/app/src/main/res/values/strings.xml
+++ b/Frontend/Unus/app/src/main/res/values/strings.xml
@@ -56,4 +56,7 @@
     <string name="old_password">Old Password:</string>
     <string name="change_button">Change</string>
 
+    <!--chat strings-->
+    <string name="message_error">Couldn\'t connect to messages</string>
+
 </resources>
