--- a/Frontend/Unus/app/src/main/res/values/strings.xml
+++ b/Frontend/Unus/app/src/main/res/values/strings.xml
@@ -56,6 +56,13 @@
     <string name="old_password">Old Password:</string>
     <string name="change_button">Change</string>
 
+    <!-- Leaderboard screen-->
+    <string name="global">Global</string>
+    <string name="friends">Friends</string>
+    <string name="games_played">Games Played</string>
+    <string name="games_won">Games Won</string>
+
+
     <!--chat strings-->
     <string name="message_error">Couldn\'t connect to messages</string>
 
