--- a/Frontend/Unus/app/src/main/res/values/strings.xml
+++ b/Frontend/Unus/app/src/main/res/values/strings.xml
@@ -73,7 +73,8 @@
 
     <!--chat strings-->
     <string name="message_error">Couldn\'t connect to messages</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!--booted popup-->
+    <string name="booted">GET BOOTED \n LMAO</string>
 
 </resources>
