--- a/Frontend/Unus/app/src/main/res/values/strings.xml
+++ b/Frontend/Unus/app/src/main/res/values/strings.xml
@@ -70,6 +70,11 @@
     <string name="games_played">Games Played</string>
     <string name="games_won">Games Won</string>
 
+    <!-- Admin Screen-->
+    <string name="admin_screen">Admin Page</string>
+    <string name="admin_users">Users</string>
+    <string name="admin_lobbies">Lobbies</string>
+
 
     <!--chat strings-->
     <string name="message_error">Couldn\'t connect to messages</string>
