admin page now gets users and can search for users

--- a/Frontend/Unus/app/src/main/res/values/strings.xml
+++ b/Frontend/Unus/app/src/main/res/values/strings.xml
@@ -74,6 +74,7 @@
     <string name="admin_screen">Admin Page</string>
     <string name="admin_users">Users</string>
     <string name="admin_lobbies">Lobbies</string>
+    <string name="clear">x</string>
 
 
     <!--chat strings-->
