Added websocket implementation of playing cards

--- a/Frontend/Unus/app/src/main/res/values/strings.xml
+++ b/Frontend/Unus/app/src/main/res/values/strings.xml
@@ -62,7 +62,9 @@
     <string name="player_count">%d (min 2)</string>
     <string name="start_game">Start Game</string>
     <string name="ready">Ready</string>
+    <string name="unready">Unready</string>
     <string name="game_code">Code: %1$s</string>
+    <string name="waiting_for_players">Waiting for Players</string>
 
     <!-- Leaderboard screen-->
     <string name="global">Global</string>
